# LikeButton

./: .coverage  README.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yaml
src/slapping.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_slap.py
