[metadata]
name = slapping
description = slap that like button
author = James Murphy
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
[options]
packages =
    slapping
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.0.2
    pytest-cov>=4.1.0
    mypy>=1.8.0
    flake8>=7.0.0
    tox>=4.13.0

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160